--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-fastapi==0.115.0
-fastapi-cli==0.0.13
-fastapi-cloud-cli==0.2.1
-pillow==10.4.0
-pydantic @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_4blmh3bau_/croot/pydantic_1734736077970/work
-pydantic-extra-types==2.10.5
-pydantic-settings @ file:///Users/builder/cbouss/buildout/croot/pydantic-settings_1735843952737/work
-pydantic_core @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_bdqco4zmod/croot/pydantic-core_1734726070262/work
-pytest==8.3.2
-pytest-flask==1.3.0
+ffastapi==0.115.0
 uvicorn==0.31.0
+pillow==10.4.0
+pydantic==2.10.3
+pytest==7.4.0
